# IgelArgern

./: CMakeLists.txt  README.md
src/: cell.c  cell.h  defs.h  game.c  game.h  main.c  ui.c  ui.h
